--- a/backend/package.json
+++ b/backend/package.json
@@ -32,11 +32,13 @@
     "celebrate": "^15.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.6.0",
+    "express-winston": "^4.2.0",
     "helmet": "^5.1.1",
     "joi": "^17.6.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "eslint": "^8.22.0",
