--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -2,11 +2,13 @@
   "extends": "airbnb-base",
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
     "implicit-arrow-linebreak": "off",
     "no-useless-escape": "off",
     "comma-dangle": "off",
     "operator-linebreak": "off",
-    "function-paren-newline": "off"
+    "function-paren-newline": "off",
+    "object-curly-newline": "off",
+    "newline-per-chained-call": "off",
+    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
   }
 }
