--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,6 @@
   "name": "react-around-auth",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Chen-Abudi.github.io/react-around-auth/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,8 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && scp -r ./build/* cheezumcali23@chen23-around-us.students.nomoredomainssbs.ru:/home/cheezumcali23/react-around-api-full/frontend"
   },
   "eslintConfig": {
     "extends": [
