--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -1,7 +1,7 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "no-underscore-dangle": ["error", { "allow": ["_id", "_doc"] }],
     "implicit-arrow-linebreak": "off",
     "no-useless-escape": "off",
     "comma-dangle": "off",
@@ -11,6 +11,14 @@
     "newline-per-chained-call": "off",
     "eqeqeq": "off",
     "func-names": "off",
-    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
+    "no-shadow": "off",
+    "no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "next",
+        "vars": "all",
+        "varsIgnorePattern": "^password$"
+      }
+    ]
   }
 }
