--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
-    "nth-check": ">=2.0.1"
+    "nth-check": ">=2.0.1",
+    "postcss": ">=8.4.31"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
-    "nth-check": ">=2.0.1"
+    "nth-check": ">=2.0.1",
+    "postcss": ">=8.4.31"
   }
 }
