--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,9 @@
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
-    "nth-check": ">=2.0.1",
-    "postcss": ">=8.4.31"
+    "nth-check": "~> 2.0.1",
+    "postcss": "~> 8.4.31",
+    "ip": "~> 1.1.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +41,8 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
-    "nth-check": ">=2.0.1",
-    "postcss": ">=8.4.31"
+    "nth-check": "~> 2.0.1",
+    "postcss": "~> 8.4.31",
+    "ip": "~> 1.1.9"
   }
 }
