--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,7 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
     "nth-check": "~> 2.0.1",
-    "postcss": "~> 8.4.31",
-    "ip": "~> 1.1.9"
+    "postcss": "~> 8.4.31"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,7 +41,6 @@
   "devDependencies": {
     "gh-pages": "^4.0.0",
     "nth-check": "~> 2.0.1",
-    "postcss": "~> 8.4.31",
-    "ip": "~> 1.1.9"
+    "postcss": "~> 8.4.31"
   }
 }
